# vkDemo

./: .gitignore  CMakeLists.txt  README.md  VulkanDemo.sln  VulkanRenderer.vcxproj  VulkanRenderer.vcxproj.filters  VulkanTutorial.sln  cpp.hint
Tutorial/: Source.cpp  Tutorial.vcxproj  Tutorial.vcxproj.filters  mian.cpp
Tutorial/shaders/: frag.spv  shader.frag  shader.vert
app/: CMakeLists.txt  main.cpp  oldmain.cpp
app/application/: application.cpp  application.h  camera.cpp  camera.h  deferredRenderer.cpp  deferredRenderer.h  entity.cpp  entity.h  glfwWindow.cpp  glfwWindow.h  inputManager.cpp  inputManager.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  modelManager.cpp  modelManager.h  scene.cpp  scene.h  settings.cpp  settings.h  skyBox.cpp  skyBox.h  textureManager.cpp  textureManager.h  virtualVistaEngine.cpp  virtualVistaEngine.h
app/include/imgui/: imgui_impl_glfw.cpp  imgui_widgets.cpp  imstb_truetype.h
app/include/tinyobjloader/: tiny_obj_loader.h
app/vk/: VulkanBuffer.hpp  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.hpp  VulkanFrameBuffer.hpp  VulkanHeightmap.hpp  VulkanInitializers.hpp  VulkanModel.hpp  VulkanSwapChain.hpp  VulkanTexture.hpp  VulkanTools.cpp  VulkanTools.h  VulkanUIOverlay.cpp  VulkanUIOverlay.h  benchmark.hpp  camera.hpp  frustum.hpp  threadpool.hpp  vkBuffer.cpp  vkBuffer.h  vkDevice.cpp  vkDevice.h  vkImage.cpp  vkImage.h  vkImageView.cpp  vkImageView.h  vkInitializers.hpp  vkPipeline.cpp  vkPipeline.h  vkRenderPass.cpp  vkRenderPass.h  vkSampler.cpp  vkSampler.h  vkShaderModule.cpp  vkShaderModule.h  vkSwapChain.cpp  vkSwapChain.h  vkUIOverlay.cpp  vkUIOverlay.h  vkUtils.hpp  (+2 more)
assets/: CMakeLists.txt
assets/models/hudie/: hudie.mtl
assets/shaders/: PBR_IBL_frag.spv  PBR_IBL_vert.spv  cc_test.frag  cc_test.vert  dummy_frag.spv  phong_frag.spv  phong_vert.spv  skybox_frag.spv  skybox_vert.spv  triangle_frag.spv  triangle_vert.spv
cmake/: FindAssimp.cmake  FindGLEW.cmake  FindGLFW3.cmake
demo/demo2/: mian.cpp
resources/: CMakeLists.txt
resources/shaders/: compile.bat
resources/shaders/demo1/: shader.frag  vert.spv
shaders/: CMakeLists.txt  normaldebug.geom  normaldebug.vert  shader.frag  shader.frag.spv  shader.vert
